package com.fitapp.httpServer.application.usecase.user;

import java.util.List;

import com.fitapp.httpServer.domain.entity.User;

public class FindAllUsers {
  public List<User> findAllUsers() {
    // SELECT * FROM user;
    return null;
  }
}
